fixed some layout issues

--- a/sass/components/_countdown.scss
+++ b/sass/components/_countdown.scss
@@ -1,22 +1,24 @@
 .clock {
   width: 100%;
   height: 100%;
-  padding: $padding-tb*2 $padding-lr*2;
+  padding: $padding;
 }
 
 .time {
   height: 100%;
   width: 100%;
-  font-size: $base-font-size*5;
+  font-size: $large-font;
   display: flex;
-  justify-content: space-between;
-
+  justify-content: center;
+  flex-wrap: wrap;
   > li {
-    height: 100%;
-    width: 100%;
+    width: 25%;
+    min-width: 200px;
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-wrap: wrap;
+    margin: 0.5em 0;
     &:hover{
       transform: scale(1.2);
     }
@@ -25,6 +27,10 @@
   @media screen and (max-width: 500px) {
     flex-direction: column;
     align-items: center;
+    li {
+      font-size: 1.5em;
+      margin: 0.3em 0;
+    }
   }
 }
 
@@ -33,10 +39,10 @@
   &::after {
     content: "seconds";
     position: absolute;
-    top: $base-font-size*5;
-    font-size: $base-font-size;
+    font-size: 1rem;
     color: $grey;
     opacity: 0.5;
+    bottom: -1em;
   }
 }
 
@@ -45,9 +51,9 @@
   &::after {
     content: "minutes";
     position: absolute;
-    top: $base-font-size*5;
-    font-size: $base-font-size;
+    font-size: 1rem;
     color: $grey;
+    bottom: -1em;
     opacity: 0.5;
   }
 }
@@ -57,10 +63,10 @@
   &::after {
     content: "hours";
     position: absolute;
-    top: $base-font-size*5;
-    font-size: $base-font-size;
+    font-size: 1rem;
     color: $grey;
     opacity: 0.5;
+    bottom: -1em;
   }
 }
 
@@ -69,10 +75,10 @@
   &::after {
     content: "days";
     position: absolute;
-    top: $base-font-size*5;
-    font-size: $base-font-size;
+    font-size: 1rem;
     color: $grey;
     opacity: 0.5;
+    bottom: -1em;
   }
 }
 
