--- a/sass/global/_fonts.scss
+++ b/sass/global/_fonts.scss
@@ -6,4 +6,6 @@
 
 $font-family: 'Open Sans', 'Helvetica', sans-serif;
 
-$base-font-size: 14px;
+$base-font-size: em(14);
+$medium-font: em(48);
+$large-font: em(72);
